[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "onebrain"
dynamic = ["version"]
description = "Official OneBrain SDK — persistent AI memory layer for humans and agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "AZapp One", email = "hello@azapp.one" }]
keywords = ["ai", "memory", "agents", "llm", "sdk", "onebrain"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "mypy>=1.8,<2",
    "ruff>=0.3,<1",
    "coverage[toml]>=7.4,<9",
]

[project.urls]
Homepage = "https://onebrain.rocks"
Documentation = "https://onebrain.rocks/docs"
Repository = "https://github.com/azappnew/onebrain-python"
Changelog = "https://github.com/azappnew/onebrain-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/azappnew/onebrain-python/issues"

[tool.hatch.version]
path = "src/onebrain/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/onebrain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real API (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["onebrain"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["onebrain"]
branch = true
omit = ["tests/*", "src/onebrain/_version.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
